--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="kids-title">
        <h4>kid's</h4>
        <div>
-       <button>shop kids <span class="bi bi-arrow-right"></span></button>
+       <button>shop kid,s <span class="bi bi-arrow-right"></span></button>
 </div>
     </div>
 </div>
