--- a/index.html
+++ b/index.html
@@ -654,56 +654,6 @@ contact.addEventListener('submit', function (e) {
             </div>
 
         </div>
-<<<<<<< Updated upstream
-    </div>
-    <div class="kids-title">
-       <h4>kid's</h4>
-       <div>
-       <button>shop kid,s <span class="bi bi-arrow-right"></span></button>
-</div>
-    </div>
-</div>
-<br>
-
-<section>
-    <div class="brand-border">
-<div>
-<span class="bi bi bi-minecart-loaded"><h6>FREE SHIPPING</h6></span>
-<span class="color">From all orders over $100</span>
-
-</div>
-<div>
-<span class="bi bi-arrow-return-right"><h6>FREE RETURNS</h6></span>
-<span class="color">Return money within 30 days</span>
-
-</div>
-<div>
-<span class="bi bi-shop"><h6>SECURE SHOPPING</h6></span>
-<span class="color">You're in safe hands</span>
-</div>
-<div>
-<span class="bi bi bi-lock"><h6>OVER 10,000 STYLES</h6></span>
-<span class="color">We have everything you need</span>
-</div>
-    </div>
-    <br>
-    <br>
-    <div>
-        <span class="new-collection">NEW COLLECTION</span>
-        <br>
-        <span class="new-collection2"><h2>Best Picks 2019</h2></span>
-        <br>
-        <span class="new-collection3">Appear, dry there darkness they're seas, dry waters thing fly midst. Beast, above fly brought Very green.</span>
-    </div>
-    <br>
-    <br>
-    <br>
-    <div class="nav">
-    <div class="women3">
-        <h1>modern wear</h1>
-        <div>
-            <button> shop now <span class="bi bi bi-arrow-right"></span></button>
-=======
     </section>
 
     <section id="about">
@@ -719,12 +669,18 @@ contact.addEventListener('submit', function (e) {
                     <p class="t-white poppins">A self-tought Frontend Web Developer B.COM (computer applications) student looking for
                         an opportunity in Web Development. <br>
                         Who is committed to study web development. Mindset to fullfill the life with
-                        wonderful memories and knowledge.</p>
+                        wonderful memories and knowledge.I want to be a part of renewed organization & to contribute towards the growth of the
+                        organization based on my personal capabilities by learning from the new exposure
+                        within the structured frame of work.<br><br><br>BACHELORS OF COMMERCE (B-COM (C/A) ( COMPUTER APPLICATIONS)<br>
+                        Trinity degree college<br>
+                        Passing Year: 2022<br>
+                        Marks obtained : 78%<br>
+                        Peddapally, telangana</p>
+                
                     <a class="btn live poppins" id="hireme"
                         href="https://www.linkedin.com/in/akhil-akhiii-b7a243250/">Hire Me</a>
                 </div>
             </div>
->>>>>>> Stashed changes
         </div>
     </section>
 
@@ -732,7 +688,7 @@ contact.addEventListener('submit', function (e) {
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
         <div class="services-container flex s-around h-50"">
         <div class=" skills-left flex s-center items-center">
-            <img src="/Images/skills.png" alt="">
+            <img src="../public/images/web.jpg" alt="">
         </div>
 
         <div class="skills-right flex items-center">
@@ -756,7 +712,7 @@ contact.addEventListener('submit', function (e) {
         <h1 class=" t-center my-2 t-white f-2">Services</h1>
         <div class="services-container flex s-center">
             <div class="test-item flex f-col items-center">
-                <img src="./Images//developer.png" alt="">
+                <img src="" alt="">
                 <h1 class="t-white poppins">Web Development</h1>
                 <p class="t-white poppins">Web Development is envolving everywhere. Every startup and every bussines
                     have their own websites. As my passion I will help you to build your clean and fast website for your
@@ -827,7 +783,7 @@ contact.addEventListener('submit', function (e) {
             </div>
             <div class="projects-item flex f-col s-center items-center">
                 <div class="image-container p-three">
-                    <img src="./Images/magicNotes.png" alt="">
+                    <img src="" alt="">
                 </div>
 
                 <h1 class="t-white poppins">Magic Notes App</h1>
@@ -910,8 +866,7 @@ contact.addEventListener('submit', function (e) {
                 <li><i class="fa-brands fa-youtube"></i></li>
             </a>
         </ul>
-        <p class="t-center my-2 poppins">&copy; All Rights Reserved - <span class="cpy-white poppins">Raju
-                Sheoran</span></p>
+        <p class="t-center my-2 poppins">&copy; All Rights Reserved - <span class="cpy-white poppins">AKHIL SUROJU</span></p>
 
     </footer>
 
