--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ contact.addEventListener('submit', function (e) {
         </div>
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
-                <img src="../public/Images/akhiiidp3.jpg">
+                <img src="./public/Images/akhiiidp3.jpg">
             </div>
 
         </div>
@@ -661,7 +661,7 @@ contact.addEventListener('submit', function (e) {
         <h1 class="t-center my-2 t-white f-2">About Me</h1>
         <div class="about-container flex s-around ">
             <div class=" about-left flex s-center items-center">
-                <img src="../public/images/akhiiidp2.jpg" alt="" style="width: 50%;">
+                <img src="./public/images/akhiiidp2.jpg" alt="" style="width: 50%;">
             </div>
 
             <div class="about-right flex">
@@ -689,7 +689,7 @@ contact.addEventListener('submit', function (e) {
         <h1 class="t-center my-2 t-white f-2">Skills</h1>
         <div class="services-container flex s-around h-50"">
         <div class=" skills-left flex s-center items-center">
-            <img src="../public/images/web.jpg" alt="">
+            <img src="./public/images/web.jpg" alt="">
         </div>
 
         <div class="skills-right flex items-center">
